--- a/slides/03-generalities-stat-slides.qmd
+++ b/slides/03-generalities-stat-slides.qmd
@@ -3,7 +3,7 @@ title: "Généralités"
 subtitle: "Projet d'analyse de données"
 author: "Steven Golovkine"
 lang: fr
-date: today
+date: "12 sept. 2024"
 date-format: "DD MMM YYYY"
 slide-number: c/t
 title-logo: ../include/logo-ul.png
@@ -17,26 +17,27 @@ format:
       - title-slide.html
 --- 
 
-## Plan de la présentation
 
-1. Structure d'un projet d'analyse
-2. Définition des objectifs
-3. Collecte et préparation des données
-4. Élaboration et validation des modèles
-5. Mise en production
-6. Suivi et amélioration
+## Structure d'un projet
 
-## Structure d'un projet {.smaller}
+<br>
 
-**5 étapes principales :**
+5 étapes principales :
 
-1. **Définition des objectifs**
-2. **Collecte et préparation des données**  
-3. **Élaboration et validation des modèles**
-4. **Implémentation et mise en production**
-5. **Suivi de la performance et amélioration continue**
+1. Définition des objectifs
 
-## Répartition temps vs importance
+2. Collecte et préparation des données
+
+3. Élaboration et validation des modèles
+
+4. Implémentation et mise en production
+
+5. Suivi de la performance et amélioration continue
+
+
+## Répartition temps vs importance (Pyle, 1999)
+
+<br>
 
 | Étape | Temps | Importance |
 |:------|:-----:|:----------:|
@@ -44,88 +45,116 @@ format:
 | Explorer la solution | 9% | 14% |
 | **Implementer la solution** | **1%** | **51%** |
 | **Préparer les données** | **60%** | **15%** |
-| Analyser les données | 15% | 3% |
+| Analyse descriptive des données | 15% | 3% |
 | Modéliser les données | 5% | 2% |
 
-::: {.fragment}
-**Constat :** L'importance ≠ temps passé !
-:::
+. . .
+
+**Constat**: importance ≠ temps passé !
+
 
 ## 1. Définition des objectifs
 
-:::: {.columns}
+<br>
 
-::: {.column width="50%"}
 **Pourquoi c'est crucial ?**
 
-- Guide la collecte des données
-- Définit le modèle adéquat
-- Facilite l'interprétation
-- Évite les explorations aveugles
-:::
+- Guide la collecte des données.
 
-::: {.column width="50%"}
+- Définit le modèle adéquat.
+
+- Facilite l'interprétation.
+
+- Évite les explorations aveugles.
+
+
+## 1. Définition des objectifs
+
+<br>
+
 **Comment bien formuler ?**
 
-- Clarifier les termes
-- Identifier les utilisateurs
-- Définir la population cible
-- Préciser les décisions qui dépendent des résultats
-:::
+- Clarifier les termes.
 
-::::
+- Identifier les utilisateurs.
 
-## Exemples d'objectifs
+- Définir la population cible.
 
-:::: {.columns}
+- Préciser les décisions qui dépendent des résultats.
 
-::: {.column width="50%"}
+
+
+## 1. Exemples d'objectifs
+
+<br>
+
 **❌ Mauvais objectifs**
-- Analyser les données clients
-- Analyser les données des adversaires  
-- Analyser les données du médicament
-:::
 
-::: {.column width="50%"}
+- Analyser les données clients.
+
+- Analyser les données des adversaires.
+
+- Analyser les données du médicament.
+
+. . .
+
 **✅ Bons objectifs**
-- Prédire quels clients achèteront le produit d'épargne
-- Caractériser le style de jeu pour identifier les faiblesses
-- Concevoir un protocole pour tester l'efficacité
-:::
 
-::::
+- Prédire quels clients achèteront le produit d'épargne.
+
+- Caractériser le style de jeu pour identifier les faiblesses d'une équipe.
+
+- Concevoir un protocole pour tester l'efficacité d'un médicament.
+
 
 ## 2. Sources de données
 
 **Plateformes génériques :**
+
 - [Google datasets](https://datasetsearch.research.google.com/)
+
 - [Kaggle](https://www.kaggle.com)
+
 - [UC Irvine ML Repository](https://archive-beta.ics.uci.edu)
 
 **Sources officielles :**
+
 - Canada: [StatCan](https://www.statcan.gc.ca/fr/debut)
+
 - France: [data.gouv.fr](https://www.data.gouv.fr/fr/)
+
 - USA: [data.gov](https://data.gov)
 
 **Sources internes :** bases clients, transactions, production, web analytics
 
-## Qualité des données
+## 2. Qualité des données
+
+<br>
 
 > **"Garbage in, garbage out"**
 
-**Questions essentielles :**
+<br>
+
+Quelques questions importantes :
 
 - Les données sont-elles **représentatives** ?
+
 - Sont-elles **exactes, complètes, pertinentes** ?
+
 - Y a-t-il des **valeurs manquantes, doublons, incohérences** ?
 
-## Format "Tidy Data"
 
-**3 principes fondamentaux :**
+## 2. Format "Tidy Data"
 
-1. **Chaque variable** = une colonne
-2. **Chaque observation** = une ligne  
-3. **Chaque cellule** = une valeur unique
+<br>
+
+3 principes fondamentaux :
+
+1. Chaque variable = une colonne.
+
+2. Chaque observation = une ligne.
+
+3. Chaque cellule = une valeur unique.
 
 :::: {.columns}
 
@@ -139,59 +168,170 @@ format:
 
 ::::
 
-## Exploration préliminaire
+## 2. Exploration préliminaire - Nettoyage
 
-**Nettoyage :**
-- Supprimer les doublons
-- Uniformiser les modalités
-- Vérifier les formats
+<br>
 
-**Exploration :**
-- Modalités rares/nombreuses
-- Valeurs extrêmes
-- Corrélations fortes
-- Classes déséquilibrées
-- Valeurs manquantes
+- Supprimer les doublons.
+
+- Uniformiser les modalités.
+
+- Vérifier les formats des valeurs spéciales.
+
+
+## 2. Exploration préliminaire - Exploration
+
+<br>
+
+- Modalités rares/nombreuses.
+
+- Valeurs extrêmes ou aberrantes.
+
+- Corrélations fortes.
+
+- Classes déséquilibrées.
+
+- Valeurs manquantes.
+
+## 2. Exploration préliminaire - Exploration
+
+<br>
+
+Pour faire l'exploration, on peut utiliser :
+
+- des statistiques descriptives unidimensionnelles
+
+  * numérique: moyenne, extremum, tableau de fréquences, ...
+  
+  * graphique: histogramme, boxplot
+
+
+## 2. Exploration préliminaire - Exploration
+
+<br>
+
+Pour faire l'exploration, on peut utiliser :
+
+- des statistiques descriptives bidimensionnelles
+
+  * numérique: tableaux croisés, corrélation, ...
+  
+  * graphique: diagramme de dispersion, ...
+
+## 2. Exploration préliminaire - Exploration
+
+<br>
+
+Pour faire l'exploration, on peut utiliser :
+
+- des transformations de variables
+
+  * transformation simple: passer au $\log$, standardisation, ...
+  
+  * regrouper des modalités
+  
+  * combiner des variables
+  
+## 2. Exploration préliminaire - Exploration
+
+<br>
+
+Une **valeur extrême** est une valeur éloignée des autres valeurs de la population.
+
+🚨 Peut correspondre à un profil particulier et plus rare dans la population.
+
+. . .
+
+Que faire ?
+
+. . .
+
+* Utiliser des méthodes robustes
+
+* Transformer la variable, e.g. avec un $\log$.
+
+
+## 2. Exploration préliminaire - Exploration
+
+<br>
+
+Une **valeur aberrantes** est une valeur erronée causée par une erreur de saisie, une erreur de calcul, une mauvaise mesure ou une fausse déclaration.
+
+. . .
+
+Que faire ?
+
+. . .
+
+* Les remplacer par la bonne valeur.
+
+* Les traiter comme des valeurs manquantes
+
+* Retirer l'individu.
+
 
 ## 3. Modélisation : 4 composantes
 
-1. **Espace** de représentation (cadre mathématique)
+<br>
 
-2. **Distance** ou similarité (comparer les observations)
+. . .
 
-3. **Modèle** ou algorithme (méthode d'apprentissage)
+1. **Espace** de représentation (cadre mathématique).
 
-4. **Fonction de coût** (mesure de qualité)
+2. **Distance** ou similarité (comparer les observations).
 
-## 4. Mise en production
+3. **Modèle** ou algorithme (méthode d'apprentissage).
 
-**Data Engineering :**
+4. **Fonction de coût** (mesure de qualité).
 
-- Automatiser la collecte et le nettoyage
-- Intégrer le modèle dans l'application
-- Générer rapports/prédictions en temps réel
-- Maintenir la *pipeline* de données
 
-**Rôle du Data Engineer :** conception et maintenance de bout en bout
+## 4. Mise en production : Data Engineering
+
+<br>
+
+- Automatiser la collecte et le nettoyage.
+
+- Intégrer le modèle dans l'application.
+
+- Générer rapports/prédictions en temps réel.
+
+- Maintenir la *pipeline* de données.
+
+**Rôle du Data Engineer :** conception et maintenance de bout en bout.
+
 
 ## 5. Suivi et amélioration
 
+<br>
+
 **Défis :**
-- Evolution des données (*data drift*)
-- Hypothèses initiales invalidées
-- Nouvelles variables disponibles
+
+- Evolution des données (*data drift*).
+
+- Hypothèses initiales invalidées.
+
+- Nouvelles variables disponibles.
+
+. . .
 
 **Solutions :**
-- **Monitoring** régulier des performances
-- Réentraînement avec données récentes
-- Amélioration continue du modèle
+
+- **Monitoring** régulier des performances.
+
+- Réentraînement avec données récentes.
+
+- Amélioration continue du modèle.
 
 ## Conclusion
 
-**Un bon modèle :**
+<br>
 
-- ✅ Performant à un instant donné
-- ✅ **Robuste** dans le temps
-- ✅ **Adaptable** aux changements
+Un bon modèle :
 
-**Clé du succès :** Équilibre entre toutes les étapes, pas seulement la modélisation !
+ ✅ Performant à un instant donné.
+
+ ✅ Robuste dans le temps.
+
+ ✅ Adaptable aux changements.
+
+→ Équilibre entre toutes les étapes, pas seulement la modélisation !
