--- a/td/04-dimension-td.qmd
+++ b/td/04-dimension-td.qmd
@@ -8,5 +8,45 @@ format:
       - \usepackage{mathtools} 
 ---
 
+## Exercice 1: Compréhension de l'ACP 
+
+Soit le vecteur aléatoire $X = (X_{1}, X_{2}, X_{3}, X_{4})^{\top}$ dont l'espérance et la variance sont, respectivement, données par 
+
+$$\mu = \begin{pmatrix}
+  0 \\ 1 \\ -1 \\ 0
+\end{pmatrix} \text{ et } \Sigma = \begin{pmatrix}
+  9 &  1 & -1 & 2 \\
+  1 &  4 & -1 & 1 \\
+ -1 & -1 & 16 & 0 \\
+  2 &  1 &  0 & 9 
+\end{pmatrix}.$$
+
+Les valeurs et vecteurs propres (normés) correspondants de $\Sigma$ sont 
+
+\begin{align}
+\lambda_{1} &= 16.27, \quad & \alpha_1 &= (0.165, 0.098, -0.980, 0.059)^{\top}, \\
+\lambda_{2} &= 11.12, \quad & \alpha_1 &= (0.665, 0.169, 0.171, 0.707)^{\top}, \\
+\lambda_{3} &= 6.95, \quad & \alpha_1 &= (0.718, -0.017, 0.077, -0.691)^{\top}, \\
+\lambda_{4} &= 3.67, \quad & \alpha_1 &= (0.118, -0.981, -0.070, 0.139)^{\top}. \\
+\end{align}
+
+1. Trouvez une combinaison linéaire de $X_{1}, X_{2}, X_{3}$ et $X_{4}$ dont la variance est $6.95$.
+
+2. Soit $Z = a_{0} + a_{1} X_{1} + a_{2} X_{2} + a_{3} X_{3} + a_{4} X_{4}$. Trouvez les valeurs de $a_{0}, a_{1}, a_{2}, a_{3}, a_{4}$ telles que $Z$ est de moyenne $0$ et de variance maximale. Quelle est la valeur de cette variance ? Quelle est la covariance entre cette combinaison linéaire et celle trouvée dans la question 1.
+
+3. Donnez une matrice diagonale $M$ telle que $M \Sigma M = R$, où $R$ est la matrice des corrélations de $X$.
+
+## Exercice 2: Matrice de covariance et de corrélation 
+
+Démontrer que la matrice de variance-covariance échantillonnnale des données centrées et réduites est égale à la matrice de corrélation échantillonnale des données initiales.
 
 
+## Exercice 3: Pratique de l'ACP 
+
+Soit un vecteur de trois variables aléatoires $X = (X_{1}, X_{2}, X_{3})^{\top}$ dont la matrice de variance est donnée par $\mathrm{Var}(X) = \Sigma$. On vous dit que les valeurs propres de $\Sigma$ sont $3, 2$ et $1$ et que les vecteurs propres normés correspondants sont, respectivement, $v_{1} = (0, - 1 / \sqrt{2}, 1 / \sqrt{2})^{\top}$, $v_{2} = (1, 0, 0)^{\top}$ et $v_{3} = (0, 1 / \sqrt{2}, 1 / \sqrt{2})^{\top}$.
+
+1. En fait, $X_{1}, X_{2}$ et $X_{3}$ représentent, respectivement, la circonférence du poignet droit, un score de capacité pulmonaire et l'indice de masse corporelle des individus d'une certaine population. Les médecins aimeraient résumer ces trois mesures en un seul score, noté $C$, qui est une combinaison linéaire des trois variables originales, i.e. $C = c_{1} X_{1} + c_{2} X_{2} + c_{3} X_{3}$ pour des nombres réels $c_{1}, c_{2}$ et $c_{3}$) et qui capture le plus de variabilité possible. Trouvez les valeurs de $c_{1}, c_{2}$ et $c_{3}$ telles que $\sum_{j = 1}^{3} c_j^2 = 1$ et que la variance de $C$ sera maximale. Quelle est la valeur de cette variance maximale ?
+
+2. Quelle proportion de la variabilité totale de $X_{1}, X_{2}$ et $X_{3}$ est capturée par $C$ ?
+
+3. Retrouvez la matrice $\Sigma$ à partir des informations données dans l'énoncé de la question.
